# agent-distiller

./: README.md
agent-distiller/: CONTRIBUTING.md  README.md  demo.py  pyproject.toml
agent-distiller/configs/: distill-research.yaml
agent-distiller/examples/: tasks.jsonl
agent-distiller/src/agent_distiller/: __init__.py  cli.py  models.py  reporters.py
agent-distiller/src/agent_distiller/collectors/: __init__.py
agent-distiller/src/agent_distiller/evaluators/: __init__.py
agent-distiller/src/agent_distiller/providers/: base.py  openai.py
agent-distiller/src/agent_distiller/trainers/: __init__.py
agent-distiller/tests/: test_core.py
